flaskr/static/styles/style.css
/* html { font-family: sans-serif; background: #eee; padding: 1rem; }
body { max-width: 960px; margin: 0 auto; background: white; }
h1 { font-family: serif; color: #377ba8; margin: 1rem 0; }
a { color: #377ba8; }
hr { border: none; border-top: 1px solid lightgray; }
nav { background: lightgray; display: flex; align-items: center; padding: 0 0.5rem; }
nav h1 { flex: auto; margin: 0; }
nav h1 a { text-decoration: none; padding: 0.25rem 0.5rem; }
nav ul  { display: flex; list-style: none; margin: 0; padding: 0; }
nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
.content { padding: 0 1rem 1rem; }
.content > header { border-bottom: 1px solid lightgray; display: flex; align-items: flex-end; }
.content > header h1 { flex: auto; margin: 1rem 0 0.25rem 0; }
.flash { margin: 1em 0; padding: 1em; background: #cae6f6; border: 1px solid #377ba8; }
.post > header { display: flex; align-items: flex-end; font-size: 0.85em; }
.post > header > div:first-of-type { flex: auto; }
.post > header h1 { font-size: 1.5em; margin-bottom: 0; }
.post .about { color: slategray; font-style: italic; }
.post .body { white-space: pre-line; }
.content:last-child { margin-bottom: 0; }
.content form { margin: 1em 0; display: flex; flex-direction: column; }
.content label { font-weight: bold; margin-bottom: 0.5em; }
.content input, .content textarea { margin-bottom: 1em; }
.content textarea { min-height: 12em; resize: vertical; }
input.danger { color: #cc2f2e; } */

@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
/*
Fonts:
Inter: font-family: 'Inter', sans-serif;
Lora: font-family: 'Lora', serif;

Colours:
White: #FFFFFF;
Saturated purple: #0E00AB;
Black: #000000;
*/

/******************************************Bootstrap*/
input[type=submit] { align-self: start; min-width: 10em; }

/******************************************General HTML elements*/
* {
    box-sizing: border-box;
}

body {
    font-family: 'Inter', sans-serif;
    background: white;
    margin: 0;
    height: 100%;
}

span {
    font-size: 0.7rem;
}

/******************************************Navbar*/
.nav-items {
    font-weight: 400;
}

.lora-logo {
    font-family: "Lora", serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
}

/******************************************Text*/
/*Large text*/
h1 {
    font-family: 'Lora', serif;
    font-size: 2rem;
    font-weight: bold;
    text-align: center;
}

/*Medium text*/
.text {
    font-family: 'Inter', sans-serif;
    font-size: 1rem;
    text-align: center;
}

/*Note: Small text is 0.7rem*/

.accentText {
    color: #0E00AB;
}

/*Misc header styling*/
#remixHeader {
    font-size: 1rem;
}

/******************************************Page content (excluding nav bar)*/
.wrap {
    display: flex;
    align-items: center; 
    padding: 20px;
    padding-right: 15%;
}

/******************************************Form*/
.form {
    flex: 1;
    padding: 0 20px;
}

form {
    width: 100%;
}

label {
    font-size: 0.7rem;
}

input[type=text] {
    width: 100%;
    padding: 10px;
    margin-bottom: 10px;
    box-sizing: border-box;
    height: 5vh;
    border-radius: 3px;
    border-color: #DDDDDD;
    border-width: 2px;
    border-style: solid;
}

input[type=file] {
    height: 5vh;
    font-size: 0.7rem;
    width: 100%;
    border-radius: 3px;
    border-color: #DDDDDD;
    border-width: 2px;
}

.centered-submit-button {
    display: block;
    margin: 0 auto;
    background-color: #0E00AB;
    border: none;
    border-radius: 3px;
    color: #FFFFFF;
    /* font-size: 0.7rem; */
}

/*********************************Images*/
.image {
    flex: 1;
    text-align: center;
}

img {
    width: 60%;
    height: auto;
}

/*********************************Slider*/
.slider-container {
    width: 100%;
}

.slider-container .p {
    width: 100%;
}

#tooltip1 {
    float: left;
}

#tooltip2 {
    float: right;
}

input[type=range]{
    
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
}

input[type=range]:hover {
    opacity: 1; /* Fully shown on mouse-over */
  }

input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background: #0E00AB;
    cursor: pointer;
}

input[type=range]::-moz-range-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background: #0E00AB;
    cursor: pointer;
}

/*********************************Embelishments*/
hr {
    border: 1px solid #737373;
    margin-top: 8%;
}

